--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
                     --health-timeout 5s
                     --health-retries 5
         env:
-            DB_HOST: ${{ secrets.DB_HOST }}
-            DB_PORT: ${{ secrets.DB_PORT }}
+            DB_HOST: localhost
+            DB_PORT: 5432
             DB_NAME: ${{ secrets.DB_NAME }}
             DB_USER: ${{ secrets.DB_USER }}  
             DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
