--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,23 @@ jobs:
 
             - name: Run alembic migrations
               run: alembic upgrade head
+            
+            - name: Build Docker Image
+              run: docker build -t ghcr.io/${{ github.repository_owner }}/fastapi-app:latest
+
+            - name: Login to Github Container registry
+              run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+            - name: Push docker image
+              run: docker push ghcr.io/${{ github.repository_owner }}/fastapi-app:latest
+
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - name: Deploy to render
+              env: 
+                RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+              run: |
+                curl -X POST https://api.render.com/deploy/srv-d11j87re5dus738atds0 \
+                -H "Authorization: Bearer $RENDER_API_KEY"
