--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
               run: alembic upgrade head
             
             - name: Build Docker Image
-              run: docker build -t ghcr.io/${{ github.repository_owner }}/fastapi-app:latest
+              run: docker build -t ghcr.io/${{ github.repository_owner }}/fastapi-app:latest .
 
             - name: Login to Github Container registry
               run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
