--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,14 @@ jobs:
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
 
+            - name: Wait for Postgres to be ready
+              run: |
+                until pg_isready -h db -p 5432; do
+                echo "Waiting for Postgres..."
+                sleep 5
+                done
+
+
             - name: Run alembic migrations
               run: alembic upgrade head
             
